fix(dice): dice pool wrapping
* correct dice pools on actor sheets not wrapping

#2018

--- a/styles/mandar.css
+++ b/styles/mandar.css
@@ -2279,6 +2279,7 @@ img {
   cursor: pointer;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .starwarsffg .skillsGrid .dice-pool img {
